@@ -2,19 +2,28 @@ import Ember from 'ember';
 import KeyboardShortcuts from 'ember-keyboard-shortcuts/mixins/component';
 import {timeout, task} from 'ember-concurrency';
 
+
+let _keys = [
+    {key: '.', action: 'open_quick_search', description: 'Opens quick jump'},
+    {key: 'esc', action: 'close_boxes'},
+    {key: 'ctrl+s', action: 'goto_sessions', description: 'Jump to Sessions view'},
+    {key: 'ctrl+u', action: 'goto_users', description: 'Jump to Users view'},
+    {key: '?', action: 'display_help', description: 'Show this help message'},
+];
+
+let _shortcuts = {};
+
+_keys.forEach(function(k) {
+    _shortcuts[k.key] = k.action;
+});
+
+
 export default Ember.Component.extend(KeyboardShortcuts, {
+    help_displayed: true,
 
-    keyboardShortcuts: {
-        '.' : 'open_quick_search',
-        'esc': 'close_box',
-    },
+    keyboardShortcuts: _shortcuts,
+    keys: _keys,
 
-    close_box() {
-        let element = Ember.$('#goto-input');
-        element.typeahead('destroy');
-        element.off();
-        this.set('quick_search_open', false);
-    },
 
     search(query, _, callback) {
         this.get('async_search').perform(query, callback);
@@ -25,7 +34,7 @@ export default Ember.Component.extend(KeyboardShortcuts, {
         let self = this;
         console.log('selecting', obj);
 
-        self.close_box();
+        self.sendAction('close_boxes');
         self.router.transitionTo(obj.type, obj.key);
 
     },
@@ -38,9 +47,26 @@ export default Ember.Component.extend(KeyboardShortcuts, {
 
     actions: {
 
-        close_box() {
-            this.close_box();
+        close_boxes() {
+            let element = Ember.$('#goto-input');
+            element.typeahead('destroy');
+            element.off();
+            this.set('quick_search_open', false);
+            this.set('help_displayed', false);
         },
+
+        display_help() {
+            this.set('help_displayed', true);
+        },
+
+        goto_sessions() {
+            this.router.transitionTo('sessions');
+        },
+
+        goto_users() {
+            this.router.transitionTo('users');
+        },
+
 
         open_quick_search() {
             let self = this;
@@ -70,7 +96,7 @@ export default Ember.Component.extend(KeyboardShortcuts, {
                     },
                 });
                 element.on('focusout', function() {
-                    self.close_box();
+                    self.sendAction('close_boxes');
                 }).on('typeahead:selected', function(evt, obj) {
                     self.select(obj);
                 }).on('typeahead:render', function() {
