@@ -1,6 +1,7 @@
 Version 2.1.0 (Unreleased)
 --------------------------
 
+* Added keyboard shortcuts support (type `?` for more information)
 * Add ability to control timestamp formats in session/test view
 * Use full names to refer to users
 * Many improvements to session and test views, including hover pop-ups infos for errors, skips and warnings
